# adv-prog-project-ocr

./: README.md  pyproject.toml
design/: design-evidencing-guide-v1.md  design-meeting-2.md  user_stories.md
player/: player.py  player_qt6.py  player_qt6_claude.py
preliminary/: library_basics.py  simple_api.py
